# pilink

./: .gitignore  Dockerfile  README.md  bootstrap.sh
actix_backend/: Cargo.toml
actix_backend/src/: main.rs
actix_backend/src/apps/: mod.rs
actix_backend/src/apps/link_shortener/: mod.rs
actix_backend/src/apps/link_shortener/libs/: config.rs  mod.rs  mongodb.rs
actix_backend/src/apps/link_shortener/libs/userinput_processor/: longlink.rs  mod.rs  shortlink.rs
actix_backend/src/apps/link_shortener/routes/: check_uri.rs  mod.rs  new.rs  redirect_to_shortlink.rs  root.rs  view_hits.rs
actix_backend/src/apps/link_shortener/webpages/: hits.html  index.html
actix_backend/src/apps/link_shortener/webpages/_app/: version.json
actix_backend/src/apps/link_shortener/webpages/_app/immutable/assets/: 0.758c0d12.css  2.3c39b9e7.css
actix_backend/src/apps/link_shortener/webpages/_app/immutable/chunks/: index.a6586c94.js  singletons.bd5dfaa0.js
actix_backend/src/apps/link_shortener/webpages/_app/immutable/entry/: app.ef73106c.js  start.9ba692d0.js
actix_backend/src/apps/link_shortener/webpages/_app/immutable/nodes/: 0.a91b2f80.js  1.1d13c4bb.js  2.17647913.js  3.a57342aa.js
actix_backend/src/libs/: hash_gen.rs  mod.rs
svelte_frontend/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  svelte_frontend
svelte_frontend/src/: app.d.ts  app.html  global.scss
svelte_frontend/src/lib/modules/: footer.svelte  header.svelte
svelte_frontend/src/routes/: +layout.svelte  +page.svelte
svelte_frontend/src/routes/expand/: +page.svelte
(+1 files in other folders)
