[package]
name = "actix_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.4.0", features = []}
actix-cors = "0.6.4"
actix-multipart = {version = "0.6.1", features = []}
actix-settings = "0.6.0"
actix-files = "0.6.2"
toml = { version = "0.8.1", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
mongodb = {version = "2.7.0", features = ["tokio-runtime"]}
env_logger = { version = "0.10.0", features = [] }
rand = "0.8.5"

